--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
+        <p>Welcome to my website!</p>
         Hello, world!
     </body>
 </html>
